tests/miniJava/neg/006747_mutation.MiniJava
class java { static static void Main ( String [ ] java ) { { } } }
